site/css/style.css
html,
body {
  height: 100%;
  font-family: "Brandon Grotesk", Helvetica, sans-serif;
  color: white;
}

a,
a:hover,
a:active {
  color: inherit;
  text-decoration: none;
}

*:focus {
  outline: 0;
  outline-width: 0;
  outline: none;
  box-shadow: none !important;
  border-color:transparent;
  border:0;
}

footer {
  position: absolute;
  bottom: 0;
  overflow: hidden;
  width: 100%;
}

footer #foot {
  position: relative;
  height: 100px;
}

footer #logo {
  position: absolute;
  text-align: center;
  right: 0;
  bottom: 0;
  font-size: 14pt;
}

footer #links {
  position: absolute;
  text-align:center;
  width: 100%;
  bottom: 0;
  font-size: 14pt;
  overflow: hidden;
}
footer #links a {
  padding-left: 10px;
}

#main {
  font-size: 400%;
  display: table;
  position: absolute;
  min-height: 100%;
  height:100%;
  width: 100%;
  text-align: center;
  color: #fff;
  text-shadow: 0px 0px 10px #000;
}

#main p {
  font-size: 14px;
}

#main #content {
  display: table-cell;
  vertical-align: middle;
}

#main #play-control {
  display: block;
  margin: 10px auto;
  cursor: pointer;
  width: 80px;
  padding-right: 10px;
  text-align: center;
}

#main .admin {
  background: rgba(255,255,255,0.5);
  border-radius: 5px;
  display: block;
  margin: 0 auto;
  padding: 10px;
  width: 50%;
}

#form-status {
  font-size: 14pt;
  color: white;
  padding: 15px;
}

#chat {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  width: 30%;
  background: rgba(255,255,255,0.6);
}

#messages {
  height: 95%;
}

#messages dl {
  height: 100%;
  width: 80%;
  overflow: scroll;
  word-wrap: break-word;
}

#messages input {
  border-radius: 0;
  background-color: rgba(0,0,0,0);
  width: 100%;
  display: block;
  border: 0;
}

#chat .messages {
  position: relative;
}

#chat .enable {
  position: absolute;
  bottom: 0;
  z-index: 1000;
  cursor: pointer;
}

#chat input {
  position: absolute;
  top: 0;
}

#chat dt,#chat dd {
  display: inline;
  padding-right: 1px;
}


@font-face {
  font-family: 'EntypoRegular';
  src: url("font/entypo.eot");
  src: url("font/entypo.eot?#iefix") format('embedded-opentype'), url("font/entypo.woff") format('woff'), url("font/entypo.ttf") format('truetype'), url("font/entypo.svg#EntypoRegular") format('svg');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'EntypoSocial';
  src: url("font/entypo-social.eot");
  src: url("font/entypo-social.eot?#iefix") format('embedded-opentype'), url("font/entypo-social.woff") format('woff'), url("font/entypo-social.ttf") format('truetype'), url("font/entypo-social.svg#EntypoRegular") format('svg');
  font-weight: normal;
  font-style: normal;
}

.entypo {
  font-family: 'EntypoRegular','EntypoSocial';
  font-weight: normal;
  font-size: 200%;
  line-height: 50%;
  padding-right:0px;
}

